# json_tlv

./: .gitignore  CMakeLists.txt
include/: jp_json_parser.h  jp_tlv_data.h  jp_util.h
src/: jp.c  jp_tlv_data.c  jp_util.c
test/inputs/: 1.json
